# veil

./: .gitignore  CONTRIBUTING.md  README.md
coordinator/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  package.json  tsconfig.json
coordinator/drizzle/: 0000_daffy_black_tarantula.sql  (+1 more)
dashboard/: package.json
docs/: .gitignore  README.md  next.config.mjs  package.json  theme.config.tsx
examples/: 01-init-vault.ts  02-deposit.ts  03-create-schedule.ts  04-register-with-coordinator.ts  05-full-flow.ts  README.md  helpers.ts  mint-test-token.ts  package.json  tsconfig.json
program/: Anchor.toml  package-lock.json  package.json
program/programs/veil/: Cargo.toml
program/programs/veil/src/: constants.rs  error.rs  events.rs  lib.rs
program/programs/veil/src/instructions/: mod.rs
program/programs/veil/src/instructions/admin/: init_config.rs  mod.rs  pause.rs  set_er_authority.rs  unpause.rs  update_mint_whitelist.rs
program/programs/veil/src/instructions/er/: commit.rs  mod.rs
program/programs/veil/src/instructions/schedule/: cancel_schedule.rs  claim_payment.rs  create_schedule.rs  delegate_schedule.rs  execute_settlement.rs  mod.rs  pause_schedule.rs  undelegate_schedule.rs  update_schedule.rs
program/programs/veil/src/instructions/vault/: delegate_vault.rs  deposit.rs  init_vault.rs  mod.rs  undelegate_vault.rs  withdraw.rs
program/programs/veil/src/state/: mod.rs  schedule_account.rs  vault_account.rs  veil_config.rs
program/programs/veil/src/utils/: merkle.rs
sdk/: Docs.md  README.md  package.json  tsconfig.json
(+120 files in other folders)
